--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -10,7 +10,7 @@
 @import './global/typography';
 @import './global/utils';
 
-@import './pages/landing';
+@import './pages/home';
 @import './pages/posts';
 @import './pages/profile';
 @import './pages/profiles';
