Added alerts and started work on reducers

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -4,6 +4,7 @@
 @import './components/overlay';
 
 @import './global/base';
+@import './global/layout';
 @import './global/media-queries';
 @import './global/theme';
 @import './global/typography';
