--- a/client/src/styles/old/pages/_home.scss
+++ b/client/src/styles/old/pages/_home.scss
@@ -1,5 +1,5 @@
 .home {
-    background: url('../../assets/images/showcase.jpg') no-repeat center center/cover;
+    background: url('../../../assets/images/showcase.jpg') no-repeat center center/cover;
     height: 100vh;
 }
 
