Updated Button, CustomLink, Home and Navbar styling

--- a/client/src/styles/old/global/_base.scss
+++ b/client/src/styles/old/global/_base.scss
@@ -1,24 +1,24 @@
-*,
-*::after,
-*::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
+// *,
+// *::after,
+// *::before {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: inherit;
+// }
 
-body {
-    line-height: 1.6;
-    box-sizing: border-box;
-    background-color: var(--color-white);
-}
+// body {
+//     line-height: 1.6;
+//     box-sizing: border-box;
+//     background-color: var(--color-white);
+// }
 
-ul,
-ol {
-    list-style: none;
-}
+// ul,
+// ol {
+//     list-style: none;
+// }
 
-img {
-    width: 100%;
-    max-width: 100%;
-    vertical-align: middle;
-}
+// img {
+//     width: 100%;
+//     max-width: 100%;
+//     vertical-align: middle;
+// }
