--- a/client/src/styles/old/components/_navbar.scss
+++ b/client/src/styles/old/components/_navbar.scss
@@ -1,29 +1,29 @@
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.7rem 2rem;
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    top: 0;
-    border-bottom: solid 1px var(--color-primary);
-    opacity: 0.9;
-}
+// .navbar {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     padding: 0.7rem 2rem;
+//     position: fixed;
+//     z-index: 1;
+//     width: 100%;
+//     top: 0;
+//     border-bottom: solid 1px var(--color-primary);
+//     opacity: 0.9;
+// }
 
 .navbar ul {
     display: flex;
 }
 
-.navbar a {
-    color: var(--color-white);
-    padding: 0.45rem;
-    margin: 0 0.25rem;
-}
+// .navbar a {
+//     color: var(--color-white);
+//     padding: 0.45rem;
+//     margin: 0 0.25rem;
+// }
 
-.navbar a:hover {
-    color: var(--color-primary);
-}
+// .navbar a:hover {
+//     color: var(--color-primary);
+// }
 
 .navbar .welcome span {
     margin-right: 0.6rem;
