--- a/client/src/styles/old/components/_overlay.scss
+++ b/client/src/styles/old/components/_overlay.scss
@@ -1,8 +1,8 @@
-.dark-overlay {
-    background-color: rgba(0, 0, 0, 0.7);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+// .dark-overlay {
+//     background-color: rgba(0, 0, 0, 0.7);
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+// }
