--- a/client/src/styles/old/global/_layout.scss
+++ b/client/src/styles/old/global/_layout.scss
@@ -1,8 +1,8 @@
-.container {
-    max-width: 1200px;
-    margin: auto;
-    overflow: hidden;
-    padding: 0 2rem;
-    margin-top: 6rem;
-    margin-bottom: 3rem;
-}
+// .container {
+//     max-width: 1200px;
+//     margin: auto;
+//     overflow: hidden;
+//     padding: 0 2rem;
+//     margin-top: 6rem;
+//     margin-bottom: 3rem;
+// }
