--- a/client/src/styles/old/global/_media-queries.scss
+++ b/client/src/styles/old/global/_media-queries.scss
@@ -1,86 +1,86 @@
-@media (max-width: 700px) {
-    .container {
-        margin-top: 8rem;
-    }
+// @media (max-width: 700px) {
+//     .container {
+//         margin-top: 8rem;
+//     }
 
-    .hide-sm {
-        display: none;
-    }
+//     .hide-sm {
+//         display: none;
+//     }
 
-    /* Text Styles */
-    .x-large {
-        font-size: 3rem;
-    }
+//     /* Text Styles */
+//     .x-large {
+//         font-size: 3rem;
+//     }
 
-    .large {
-        font-size: 2rem;
-    }
+//     .large {
+//         font-size: 2rem;
+//     }
 
-    .lead {
-        font-size: 1.6rem;
-    }
+//     .lead {
+//         font-size: 1.6rem;
+//     }
 
-    /* Navbar */
-    .navbar {
-        display: block;
-        text-align: center;
-    }
+//     /* Navbar */
+//     .navbar {
+//         display: block;
+//         text-align: center;
+//     }
 
-    .navbar ul {
-        text-align: center;
-        justify-content: center;
-    }
+//     .navbar ul {
+//         text-align: center;
+//         justify-content: center;
+//     }
 
-    .navbar h1 {
-        margin-bottom: 1.6rem;
-    }
+//     .navbar h1 {
+//         margin-bottom: 1.6rem;
+//     }
 
-    .navbar .welcome {
-        display: none;
-    }
+//     .navbar .welcome {
+//         display: none;
+//     }
 
-    /* Profiles Page */
-    .profile {
-        grid-template-columns: 1fr;
-        text-align: center;
-    }
+//     /* Profiles Page */
+//     .profile {
+//         grid-template-columns: 1fr;
+//         text-align: center;
+//     }
 
-    .profile ul {
-        display: none;
-    }
+//     .profile ul {
+//         display: none;
+//     }
 
-    /* Profile Page */
+//     /* Profile Page */
 
-    .profile-top img,
-    .profile img {
-        width: 200px;
-        margin: auto;
-    }
+//     .profile-top img,
+//     .profile img {
+//         width: 200px;
+//         margin: auto;
+//     }
 
-    .profile-grid {
-        grid-template-areas:
-            'top'
-            'about'
-            'exp'
-            'edu'
-            'github';
-    }
+//     .profile-grid {
+//         grid-template-areas:
+//             'top'
+//             'about'
+//             'exp'
+//             'edu'
+//             'github';
+//     }
 
-    .profile-about .skills {
-        flex-direction: column;
-    }
+//     .profile-about .skills {
+//         flex-direction: column;
+//     }
 
-    .dash-buttons a {
-        display: block;
-        width: 100%;
-        margin-bottom: 0.2rem;
-    }
+//     .dash-buttons a {
+//         display: block;
+//         width: 100%;
+//         margin-bottom: 0.2rem;
+//     }
 
-    .post {
-        grid-template-columns: 1fr;
-    }
-    .post a,
-    .post button {
-        padding: 0.3rem 0.4rem;
-    }
-}
+//     .post {
+//         grid-template-columns: 1fr;
+//     }
+//     .post a,
+//     .post button {
+//         padding: 0.3rem 0.4rem;
+//     }
+// }
