--- a/client/src/styles/old/global/_typography.scss
+++ b/client/src/styles/old/global/_typography.scss
@@ -1,39 +1,39 @@
-body {
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.6rem;
-    color: var(--color-grey-dark);
-}
+// body {
+//     font-family: 'Raleway', sans-serif;
+//     font-size: 1.6rem;
+//     color: var(--color-grey-dark);
+// }
 
-a {
-    color: var(--color-primary);
-    text-decoration: none;
-}
+// a {
+//     color: var(--color-primary);
+//     text-decoration: none;
+// }
 
-.x-large {
-    font-size: 4rem;
-    line-height: 1.2;
-    margin-bottom: 1.6rem;
-}
+// .x-large {
+//     font-size: 4rem;
+//     line-height: 1.2;
+//     margin-bottom: 1.6rem;
+// }
 
-.large {
-    font-size: 3rem;
-    line-height: 1.2;
-    margin-bottom: 1.6rem;
-}
+// .large {
+//     font-size: 3rem;
+//     line-height: 1.2;
+//     margin-bottom: 1.6rem;
+// }
 
-.lead {
-    font-size: 1.5rem;
-    margin-bottom: 1.6rem;
-}
+// .lead {
+//     font-size: 1.5rem;
+//     margin-bottom: 1.6rem;
+// }
 
-.text-center {
-    text-align: center;
-}
+// .text-center {
+//     text-align: center;
+// }
 
-.text-primary {
-    color: var(--color-primary);
-}
+// .text-primary {
+//     color: var(--color-primary);
+// }
 
-.text-dark {
-    color: var(--color-grey-dark);
-}
+// .text-dark {
+//     color: var(--color-grey-dark);
+// }
