--- a/client/src/styles/old/global/_utils.scss
+++ b/client/src/styles/old/global/_utils.scss
@@ -1,59 +1,59 @@
-.round-img {
-    border-radius: 50%;
-}
+// .round-img {
+//     border-radius: 50%;
+// }
 
-.line {
-    height: 1px;
-    background: var(--color-grey-light);
-    margin: 1.5rem 0;
-}
+// .line {
+//     height: 1px;
+//     background: var(--color-grey-light);
+//     margin: 1.5rem 0;
+// }
 
-.p {
-    padding: 0.5rem;
-}
-.p-1 {
-    padding: 1.6rem;
-}
-.p-2 {
-    padding: 2rem;
-}
-.p-3 {
-    padding: 3rem;
-}
-.py {
-    padding: 0.5rem 0;
-}
-.py-1 {
-    padding: 1.6rem 0;
-}
-.py-2 {
-    padding: 2rem 0;
-}
-.py-3 {
-    padding: 3rem 0;
-}
+// .p {
+//     padding: 0.5rem;
+// }
+// .p-1 {
+//     padding: 1.6rem;
+// }
+// .p-2 {
+//     padding: 2rem;
+// }
+// .p-3 {
+//     padding: 3rem;
+// }
+// .py {
+//     padding: 0.5rem 0;
+// }
+// .py-1 {
+//     padding: 1.6rem 0;
+// }
+// .py-2 {
+//     padding: 2rem 0;
+// }
+// .py-3 {
+//     padding: 3rem 0;
+// }
 
-.m {
-    margin: 0.5rem;
-}
-.m-1 {
-    margin: 1.6rem;
-}
-.m-2 {
-    margin: 2rem;
-}
-.m-3 {
-    margin: 3rem;
-}
-.my {
-    margin: 0.5rem 0;
-}
-.my-1 {
-    margin: 1.6rem 0;
-}
-.my-2 {
-    margin: 2rem 0;
-}
-.my-3 {
-    margin: 3rem 0;
-}
+// .m {
+//     margin: 0.5rem;
+// }
+// .m-1 {
+//     margin: 1.6rem;
+// }
+// .m-2 {
+//     margin: 2rem;
+// }
+// .m-3 {
+//     margin: 3rem;
+// }
+// .my {
+//     margin: 0.5rem 0;
+// }
+// .my-1 {
+//     margin: 1.6rem 0;
+// }
+// .my-2 {
+//     margin: 2rem 0;
+// }
+// .my-3 {
+//     margin: 3rem 0;
+// }
