--- a/client/src/styles/old/pages/_home.scss
+++ b/client/src/styles/old/pages/_home.scss
@@ -1,16 +1,16 @@
-.home {
-    background: url('../../../assets/images/showcase.jpg') no-repeat center center/cover;
-    height: 100vh;
-}
+// .home {
+//     background: url('../../../assets/images/showcase.jpg') no-repeat center center/cover;
+//     height: 100vh;
+// }
 
-.home-inner {
-    color: var(--color-white);
-    height: 100%;
-    width: 80%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
+// .home-inner {
+//     color: var(--color-white);
+//     height: 100%;
+//     width: 80%;
+//     margin: auto;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+//     text-align: center;
+// }
