--- a/client/src/styles/old/global/_media-queries.scss
+++ b/client/src/styles/old/global/_media-queries.scss
@@ -20,22 +20,22 @@
 //         font-size: 1.6rem;
 //     }
 
-//     /* Navbar */
-//     .navbar {
+//     /* Header */
+//     .Header {
 //         display: block;
 //         text-align: center;
 //     }
 
-//     .navbar ul {
+//     .Header ul {
 //         text-align: center;
 //         justify-content: center;
 //     }
 
-//     .navbar h1 {
+//     .Header h1 {
 //         margin-bottom: 1.6rem;
 //     }
 
-//     .navbar .welcome {
+//     .Header .welcome {
 //         display: none;
 //     }
 
