Added advanced emailer

--- a/server/views/email/passwordReset.pug
+++ b/server/views/email/passwordReset.pug
@@ -1,8 +1,7 @@
 extends baseEmail
-// TODO: edit reset password link to correct page & redo styling to match frontend
 block content
   p Hi #{firstName},
-  p Reset your password by clicking the following link: #{url}.
+  p Reset your DevLink password by clicking the following button:
   table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
     tbody
       tr
@@ -12,4 +11,7 @@ block content
               tr
                 td
                   a(href=`${url}`, target='_blank') Reset your password
+  p Or by visiting the following link:
+  a(href=`${url}`, target='_blank') #{url}
+  p
   p If you didn't request a password reset, please ignore this email!
