--- a/server/views/email/_style.pug
+++ b/server/views/email/_style.pug
@@ -46,7 +46,7 @@ style.
     padding: 10px; 
   }
   .main {
-    background: #ffffff;
+    background-color: #ffffff;
     border-radius: 3px;
     width: 100%; 
   }
