Simplified and improved buttons and links

--- a/server/views/email/_style.pug
+++ b/server/views/email/_style.pug
@@ -6,7 +6,7 @@ style.
     max-width: 100%; 
   }
   body {
-    background-color: #f6f6f6;
+    background: #f6f6f6;
     font-family: sans-serif;
     -webkit-font-smoothing: antialiased;
     font-size: 14px;
@@ -27,7 +27,7 @@ style.
       vertical-align: top; 
   }
   .body {
-    background-color: #f6f6f6;
+    background: #f6f6f6;
     width: 100%; 
   }
   .container {
@@ -46,7 +46,7 @@ style.
     padding: 10px; 
   }
   .main {
-    background-color: #ffffff;
+    background: #ffffff;
     border-radius: 3px;
     width: 100%; 
   }
@@ -117,12 +117,12 @@ style.
       width: auto; 
   }
     .btn table td {
-      background-color: #ffffff;
+      background: #ffffff;
       border-radius: 5px;
       text-align: center; 
   }
     .btn a {
-      background-color: #ffffff;
+      background: #ffffff;
       border: solid 1px #55c57a;
       border-radius: 5px;
       box-sizing: border-box;
@@ -137,10 +137,10 @@ style.
       text-transform: capitalize; 
   }
   .btn-primary table td {
-    background-color: #55c57a; 
+    background: #55c57a; 
   }
   .btn-primary a {
-    background-color: #55c57a;
+    background: #55c57a;
     border-color: #55c57a;
     color: #ffffff; 
   }
@@ -250,10 +250,10 @@ style.
       text-decoration: none !important; 
     }
     .btn-primary table td:hover {
-      background-color: #2e864b !important; 
+      background: #2e864b !important; 
     }
     .btn-primary a:hover {
-      background-color: #2e864b !important;
+      background: #2e864b !important;
       border-color: #2e864b !important; 
     } 
   }
